Compartilhamento de conta e ajustes no front
